fix(layout): squash bugs with asscroll

--- a/src/css/custom-style/_shared-styles.scss
+++ b/src/css/custom-style/_shared-styles.scss
@@ -77,7 +77,7 @@
 // --------------------------------
 
 main {
-  min-height: 800px;
+  min-height: 90vh;
 }
 
 // --------------------------------
